--- a/Mission6_Villar/Views/Home/about.cshtml
+++ b/Mission6_Villar/Views/Home/about.cshtml
@@ -2,4 +2,63 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-}x
+}
+<main>
+
+    <article class="panel">
+        <div class="text-wrapper left">
+            <h2>Why Joel</h2>
+
+
+            <p> Click on the button below to visit the Quick Wits Comedy club website!
+            </p>
+            <a href="https://www.qwcomedy.com" class="button">
+                Quick Wits Comedy
+                <svg viewBox="1.2 2.1 22 21">
+                    <path d="M11.704 22.098a1.48 1.48 0 01-1.02-.386 1.38 1.38 0 01-.413-.996c0-.375.146-.721.415-.978.411-.397 5.078-4.857 6.494-6.21H2.706c-1.035 0-1.506-.726-1.506-1.4 0-.679.471-1.406 1.506-1.406h14.472c-1.42-1.353-6.02-5.736-6.497-6.213-.292-.291-.445-.635-.442-.996a1.37 1.37 0 01.447-.975c.501-.479 1.354-.681 2.037.003.561.56 9.765 9.334 9.856 9.423l.173.163-.172.162c-.093.09-9.407 8.985-9.86 9.422-.264.258-.639.387-1.016.387">
+                    </path>
+                </svg>
+            </a>
+        </div>
+        <div class="image-wrapper">
+            <img src="img/jude.webp" alt="A table of people serving food" width="676" height="418">
+        </div>
+    </article>
+
+    <article class="panel">
+        <div class="text-wrapper">
+            <h2>My idol!</h2>
+
+            <p>
+                The image you are looking for that links to bacon sale is not the one to your left. It is below. Click the button below for bacon sale!!!!!
+            </p>
+            <a href="https://www.baconsale.com" class="button">
+                Bacon Sale
+                <svg viewBox="1.2 2.1 22 21">
+                    <path d="M11.704 22.098a1.48 1.48 0 01-1.02-.386 1.38 1.38 0 01-.413-.996c0-.375.146-.721.415-.978.411-.397 5.078-4.857 6.494-6.21H2.706c-1.035 0-1.506-.726-1.506-1.4 0-.679.471-1.406 1.506-1.406h14.472c-1.42-1.353-6.02-5.736-6.497-6.213-.292-.291-.445-.635-.442-.996a1.37 1.37 0 01.447-.975c.501-.479 1.354-.681 2.037.003.561.56 9.765 9.334 9.856 9.423l.173.163-.172.162c-.093.09-9.407 8.985-9.86 9.422-.264.258-.639.387-1.016.387">
+                    </path>
+                </svg>
+            </a>
+        </div>
+        <div class="image-wrapper left">
+            <img src="~/img/bacon.jpg" href="https://www.baconsale.com" />
+        </div>
+    </article>
+
+</main>
+<aside>
+    <h2> This is the image that you can click!</h2>
+    <p>
+        Random tip. Drinking water and eating salads are important for maintaining overall health. Water helps keep the body hydrated
+        and functioning properly, while salads provide essential vitamins, minerals, and fiber. Both can aid in weight
+        management and promote well-being.
+    </p>
+</aside>
+<section class="cards">
+    <a href="https://www.baconsale.com" class="card">
+        <img src="~/img/bacon.jpg" width="500" height="500" />
+        <h2>Bacon Sale</h2>
+    </a>
+   
+</section>
+       
