--- a/Mission6_Villar/Views/Shared/_Layout.cshtml
+++ b/Mission6_Villar/Views/Shared/_Layout.cshtml
@@ -49,7 +49,8 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a asp-controller="Home" asp-action="about">Get to Know Joel</a></li>
-                <li><a asp-controller="Home" asp-action="form">Database</a></li>
+                <li><a asp-controller="Home" asp-action="form">Enter a movie</a></li>
+                <li><a asp-controller="Home" asp-action="display">Database</a></li>
             </ul>
         </nav>
     </header>
