--- a/Mission6_Villar/Views/Home/about.cshtml
+++ b/Mission6_Villar/Views/Home/about.cshtml
@@ -20,9 +20,7 @@
                 </svg>
             </a>
         </div>
-        <div class="image-wrapper">
-            <img src="img/jude.webp" alt="A table of people serving food" width="676" height="418">
-        </div>
+
     </article>
 
     <article class="panel">
@@ -41,7 +39,7 @@
             </a>
         </div>
         <div class="image-wrapper left">
-            <img src="~/img/bacon.jpg" href="https://www.baconsale.com" />
+            <a href="https://www.baconsale.com"> <img src="~/img/bacon.jpg" href="https://www.baconsale.com" /></a>
         </div>
     </article>
 
