--- a/Mission6_Villar/Views/Home/confirm.cshtml
+++ b/Mission6_Villar/Views/Home/confirm.cshtml
@@ -3,6 +3,6 @@
 *@
 @{
 }
-
+ 
 @model Application
-<h1> Thank you for submitting!</h1>
+<h1> Thank you for submitting!</h1> <!-- landing page to confirm your data was submitted-->
