--- a/Mission6_Villar/Views/Home/form.cshtml
+++ b/Mission6_Villar/Views/Home/form.cshtml
@@ -29,7 +29,7 @@
     </div>
     <div>
         <label asp-for="rating">Rating:</label>
-        <select asp-for="rating" class="form-control" required>
+        <select asp-for="rating" class="form-control" required> <!-- drop down to select rating -->
             <option value="G">G</option>
             <option value="PG">PG</option>
             <option value="PG-13">PG-13</option>
