--- a/Mission6_Villar/Views/Shared/_Layout.cshtml
+++ b/Mission6_Villar/Views/Shared/_Layout.cshtml
@@ -6,15 +6,14 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="16x16" href="" ~ /logo.ico"">
+    <link rel="manifest" href="images/site.webmanifest"> <!-- favicon at top of page-->
 
     <meta name="description" content="A page to find simple and delicious recipes for college students">
     <title>The Joel Hilton Film Collection</title>
