--- a/Mission6_Villar/Views/Home/form.cshtml
+++ b/Mission6_Villar/Views/Home/form.cshtml
@@ -3,57 +3,63 @@
 *@
 @{
 }
-@model Application
+@model Movie
+
 
 <h2>Create Movie Record</h2>
 <form method="post">
     <div>
-        <label asp-for="title">Title:</label>
-        <input asp-for="title" class="form-control" required />
-        <span asp-validation-for="title" class="text-danger"></span>
+        <label asp-for="Title">Title:</label>
+        <input asp-for="Title" class="form-control" required />
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="genre">Genre:</label>
-        <input asp-for="genre" class="form-control" required />
-        <span asp-validation-for="genre" class="text-danger"></span>
+        <label asp-for="CategoryId">Category: </label>
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryId">@c.CategoryName</option>
+            }
+        </select>
     </div>
     <div>
-        <label asp-for="director">Director:</label>
-        <input asp-for="director" class="form-control" required />
-        <span asp-validation-for="director" class="text-danger"></span>
+        <label asp-for="Director">Director:</label>
+        <input asp-for="Director" class="form-control" required />
+        <span asp-validation-for="Director" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="year">Year:</label>
-        <input asp-for="year" class="form-control" required />
-        <span asp-validation-for="year" class="text-danger"></span>
+        <label asp-for="Year">Year:</label>
+        <input asp-for="Year" class="form-control" required />
+        <span asp-validation-for="Year" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="rating">Rating:</label>
-        <select asp-for="rating" class="form-control" required>
+        <label asp-for="Rating">Rating:</label>
+        <select asp-for="Rating" class="form-control" required>
             <option value="G">G</option>
             <option value="PG">PG</option>
             <option value="PG-13">PG-13</option>
             <option value="R">R</option>
         </select>
-        <span asp-validation-for="rating" class="text-danger"></span>
+        <span asp-validation-for="Rating" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="edited">Edited:</label>
-        <select asp-for="edited" class="form-control" required>
+        <label asp-for="Edited">Edited:</label>
+        <select asp-for="Edited" class="form-control" required>
             <option value="true">Yes</option>
             <option value="false">No</option>
         </select>
-        <span asp-validation-for="edited" class="text-danger"></span>
+        <span asp-validation-for="Edited" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="lentTo">Lent To:</label>
-        <input asp-for="lentTo" class="form-control" />
-        <span asp-validation-for="lentTo" class="text-danger"></span>
+        <label asp-for="LentTo">Lent To:</label>
+        <input asp-for="LentTo" class="form-control" />
+        <span asp-validation-for="LentTo" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="notes">Notes:</label>
-        <input asp-for="notes" class="form-control" maxlength="25" />
-        <span asp-validation-for="notes" class="text-danger"></span>
+        <label asp-for="Notes">Notes:</label>
+        <input asp-for="Notes" class="form-control" maxlength="25" />
+        <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
     <button type="submit">Submit</button>
 </form>
