--- a/Mission6_Villar/Views/Home/display.cshtml
+++ b/Mission6_Villar/Views/Home/display.cshtml
@@ -59,8 +59,8 @@
                 <td>@x.Edited</td>
                 <td>@x.LentTo</td>
                 <td>@x.CopiedToPlex</td>
-                <td><a class="btn btn-info" asp-controller="Home" asp-action="Edit">Edit</a></td>
-                <td><a class="btn btn-danger">Delete</a></td>
+                <td><a asp-controller="Home" asp-action="Edit" asp-route-movieId="@x.MovieId" class="btn btn-info">Edit</a></td>
+                <td><a asp-controller="Home" asp-action="Delete" asp-route-movieId="@x.MovieId" class="btn btn-danger">Delete</a></td>
             </tr>
         </tbody>
     }
