--- a/Mission6_Villar/Views/Home/form.cshtml
+++ b/Mission6_Villar/Views/Home/form.cshtml
@@ -8,6 +8,7 @@
 
 <h2>Create Movie Record</h2>
 <form method="post">
+    <input type="hidden" asp-for="MovieId" />
     <div>
         <label asp-for="Title">Title:</label>
         <input asp-for="Title" class="form-control" required />
